products overlapping fixed

--- a/src/components/Products/ProductsList.css
+++ b/src/components/Products/ProductsList.css
@@ -58,4 +58,7 @@
         height: 100%;
         background-color: #192D40;
     }
+    .products .receipt-details{
+        margin: 10px;
+    }
 }
